# accord-ww-2025

./: 2025-10-22-accord_working_week.odp  build_fa.sh  readme.md  tp.md  tp_fypp.md
code/: CMakeLists.txt  clean_data.F90  main.F90  mod_constants.F90
fa/: CMakeLists.txt  compile.sh  compute.F90  fa.md  init_ttrc.F90  main.F90  mod_constants.F90  rand.F90  yomtrc.F90
